--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: huthaifa_glints
+name: com_huthaifa_glints
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -28,6 +28,7 @@ dependencies:
   firebase_auth: ^1.1.1
   firebase_core: ^1.0.4
   google_sign_in: ^5.0.2
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
